--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "patn.app",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "sass": "^1.35.2",
+    "@reduxjs/toolkit": "^1.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "sass": "^1.35.2"
   },
   "scripts": {
     "start": "react-scripts start",
