--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.1",
-    "classnames": "^2.3.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "react-scripts": "4.0.3",
-    "redux": "^4.1.0",
-    "sass": "^1.35.2"
+    "@reduxjs/toolkit": "2.2.7",
+    "classnames": "2.5.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-redux": "9.1.2",
+    "react-scripts": "5.0.1",
+    "redux": "5.0.1",
+    "sass": "1.77.8"
   },
   "scripts": {
     "start": "react-scripts start",
